fix: fix overflow in app component

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -16,6 +16,7 @@ button {
   position: relative;
   color: $color-font;
   font-family: 'Istok Web', sans-serif;
+  overflow: hidden;
 }
 
 .main {
